# chatbot-gen-ai

./: .gitignore  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: test.yml
backend/: config.py  db.py  dependencies.py  main.py  schemas.py  security.py
backend/models/: user.py
backend/routers/: auth.py  chat.py  health.py  user.py
docker/: Dockerfile  docker-compose.yaml
frontend/: biome.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/routes/: __root.tsx  chat.tsx  index.tsx  quick-start.tsx
